fix alignment

--- a/src/components/shared/DataDisplaySmall/DataDisplaySmall.module.scss
+++ b/src/components/shared/DataDisplaySmall/DataDisplaySmall.module.scss
@@ -1,10 +1,9 @@
 .dataDisplaySmall {
-  text-align: center;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  flex: 1;
-  gap: 1.5rem;
+
+  gap: 0.5rem;
   color: var(--text-color-main);
   background-color: var(--nav-color-main);
   border: solid 2px var(--color-outline);
@@ -13,15 +12,35 @@
   border-radius: 5px;
   cursor: pointer;
 
+  &.isActive {
+    border-color: var(--color-outline-hover);
+  }
+
   &:hover {
     border-color: var(--color-outline-hover);
   }
+}
+
+.top {
+  display: flex;
+  justify-content: space-between;
 }
 
 .title {
   font-size: 1rem;
 }
 
+.bottom {
+  display: flex;
+  align-items: last baseline;
+  gap: 8px;
+}
+
 .data {
-  font-size: 1.8rem;
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.completed {
+  color: var(--text-color-accent);
 }
